opengraph meta tags

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -2,7 +2,9 @@
 <html lang="en-US" class="no-js">
   <head>
     <meta charset="utf-8">
-    <meta property="og:description" content="SPONSORED: The Next Mile was created to explore trends, products, and technologies that are changing the world for the better. Inspired by BP Gasoline with Invigorate, The Next Mile will share the stories that take you a little farther, through video, infographics, photography, and interviews.">
+    <meta property="og:title" content="<%= app_name %>">
+    <meta property="og:description" content="SPONSORED: ">
+    <meta property="og:image" content="">
     <meta name="google" value="notranslate" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
