nav background is back

--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -62,7 +62,7 @@ $vox-logo: "vox-media-logo.png";
 
 // Nav
 $nav-color: #fff;
-$nav-background: $primary;
+$nav-background: rgba(0,0,0,0.6);
 
 // Sponsor logo (30px tall)
 // must be in images dir
