--- a/source/partials/_episode_template.html.erb
+++ b/source/partials/_episode_template.html.erb
@@ -105,7 +105,7 @@ category_text = categories.join(' | ')
   <footer class="footer">
       <a class="footer__logo" href="http://voxmedia.com"></a>
       <aside class="footer__text">
-        <p>This feature was produced in collaboration between <a href="http://www.voxmedia.com/vox-advertising">Vox Creative</a> and <%= sponsor_name %>. The Verge editorial staff was not involved in the creation or production of this content.</p>
+        <p>This feature was produced in collaboration between <a href="http://www.voxmedia.com/vox-advertising">Vox Creative</a> and <%= sponsor_name %>. Editorial staff was not involved in the creation or production of this content.</p>
         <small>&copy; <%= Time.new.year %>. Vox Media, Inc. All Rights Reserved</small>
       </aside>
   </footer>
