--- a/source/svg/_svg.erb
+++ b/source/svg/_svg.erb
@@ -20,6 +20,17 @@
     <polygon class="vox-logo__mark-three" points="171.6,16 171.6,39 192,27.5"/>
     <polygon class="vox-logo__mark-four" points="192,4.5 192,27.5 171.6,16"/>
   </g>
+  <!-- Vox.com Logo -->
+  <path id="voxdotcom-logo" fill="#000" d="M54.7,14.4c2,0,3.2-1.6,3.2-3.4c0-1.5-1.1-2.7-2.7-2.7c-2.9,0-4.2,2.3-6.6,6.4
+    c-0.5-2.6-1.7-6-4.7-6c-3.4,0-7.3,4.8-10.9,7.8c-1.6,1.3-3.4,2.2-4.9,2.2c-1.5,0-2.4-1.5-2.4-4.2c1-4.3,1.6-5.5,3.2-5.5
+    c1.1,0,1.6,0.6,1.6,2c0,1.4-0.3,3.7-0.9,6.7c1.6-0.5,4-2.5,6.1-4.7c-1.1-2.6-3.4-4.3-6.7-4.3c-6.2,0-11.5,5.5-11.5,11.7
+    c0,4.3,3,7.5,7.8,7.5c7.8,0,11.1-6.8,11.1-11.5c0-0.7,0-1.2-0.1-1.8c1.2-1.3,2.8-2.6,4-2.6c1.4,0,2.6,3.6,3.7,9.1
+    c-1,1.1-2,3.3-2.5,3.6c-0.2-2-1.5-3.2-3.2-3.2c-1.9,0-3.3,1.8-3.3,3.4c0,1.8,1.2,2.9,2.8,2.9c3.3,0,4.3-3.2,6.4-6
+    c0.6,3,2.1,6,4.7,6c3,0,5.9-2.6,7.3-4.4l-0.3-0.4C55,24,54,24.6,53,24.6c-1.9,0-3.2-4.1-4.3-9c0.6-0.8,1.6-3,2.3-3.7
+    C51.5,12.8,52.4,14.4,54.7,14.4 M25.3,27.6c-0.9,0-1.5-0.3-1.5-1.9c0-2,0.7-5.8,1.5-9.2c0.1,1.6,1.2,3.2,2.9,3.2
+    c0.4,0,0.7,0,1.1-0.1C27.7,26.2,27.1,27.6,25.3,27.6 M26.6,0.4h0.8L27.5,0H17.1L17,0.4h1.5c1.3,0,2.4,0.9,2.4,2.7
+    c0,1-0.4,2.3-1.1,3.9L13,21.9L11.4,2.6C11.2,1,12,0.4,13.7,0.4h1L14.8,0H0.1L0,0.4h0.9c1.1,0,1.6,0.7,1.7,2.1l2.6,25h6.2L21.7,5.6
+    C23.3,2.4,24.9,0.4,26.6,0.4"/>
   <!-- The Verge logo (474x86) -->
   <path id="verge" class="logo" d="M110,7v64c0,2.4-0.5,5-2.4,7H156V53.7c-3.4,1.5-7.5,2.3-11.5,2.3H134v-8h5.5c3,0,5.7,0.3,8.5,1.5v-21
   c-2.8,1.2-5.5,1.5-8.5,1.5l-5.5,0v-9h10.5c4,0,8.1,0.8,11.5,2.3V0h-48.5C109.4,1.6,110,4.6,110,7z M81,30H68v-8h1
