--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,62 +1,20 @@
 <!doctype html>
-<html lang="en-US" class="no-js">
+<html>
   <head>
-    <meta charset="utf-8">
-    <meta property="og:title" content="<%= app_name %>">
-    <meta property="og:description" content="SPONSORED: ">
-    <meta property="og:image" content="">
-    <meta name="google" value="notranslate" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=yes">
-    <meta name="robots" content="noindex">
-
-    <title><%= app_name %></title>
-    <% ooyala_player_code = 'b40f5b65292c4a6f8b3687c8670463fc' %>
-    <script type="text/javascript" src="http://player.ooyala.com/v3/<%= ooyala_player_code %>?platform=html5-fallback&tweaks=android-enable-hls"></script>
-
-    <%= stylesheet_link_tag "style" %>
-    <%# This is  is how we pass data from config.rb, or ruby in general, to the javascript %>
-    <script type="text/javascript">
-      var App = App || {};
-      App.Context = {
-         url_prefix: "<%= url_prefix %>",
-         app_name : "<%= app_name %>",
-         host_name: "<%= url_host %>",
-         twitter_name: "<%= twitter %>"
-       };
-
-      // A nice place holder for google analytics things
-      var _gaq = _gaq || [];
-    </script>
+    <title>Alisha Ramos</title>
   </head>
-
-  <body id="scrollbox">
-    <%= partial "svg/svg" %>
-      <nav class="nav">
-        <span class="nav__vertical">
-          <a href="/">
-            <svg class="nav__vertical__logo svg-icon" viewBox="0 0 474 86"><use xlink:href="#verge"></use></svg>
-          </a>
-          <a class="nav__burger" href="#">
-            <div class="nav__burger__patty"></div>
-            <div class="nav__burger__patty"></div>
-            <div class="nav__burger__patty"></div>
-          </a>
-        </span>
-        <%= partial 'partials/hamburger_nav', :locals => {:episodes => episodes} %>
-        <div class="right">
-          <a href="<%= clicktracker_url %>"><span class="nav__label">From Our Sponsor</span></a>
-          <%= partial 'partials/social_share' %>
-        </div>
-      </nav>
-
-  <div class="nav__background"></div>
-
-    <%= yield %>
-
-  </body>
-  <%= partial 'partials/analytics' %>
-  <%= javascript_include_tag  "base" %>
-  <%= javascript_include_tag  "bottom" %>
+<body>
+  <!-- bloop -->
+  <center>
+    <h1>~*~Alisha Ramos~*~</h1><br />
+    <i>Working on a new site design.</i><br /><br />
+    I'm a front-end designer at Vox Media.<br /><br />
+    If you're looking for my research on women entrepreneurs and venture capital,<br />
+    you can find the <a href="http://alishalisha.github.io/AlishaRamos_Thesis_WomenVC.pdf">full text of my study here.</a><br /><br />
+    <p><strong>Other:</strong><br />
+    <a href="http://twitter.com/alishalisha">@alishalisha</a> | <a href="http://alisharamos.tumblr.com">What I'm Reading</a> | <a href="http://internetgoeshere.com">Writing</a> | <a href="http://instagram.com/alisharamos">Instagram</a></p>
+    <p>You can email me at ramos.alisha@gmail.com.</p>
+    <img src="http://adultcatfinder.com/embed/cat.gif" />
+  </center>
+</body>
 </html>
