--- a/source/main.html.erb
+++ b/source/main.html.erb
@@ -1,4 +1,4 @@
-<%
+<%#
   # used for carousel at the bottom of the index page ------
   videos = []
   episodes.each_with_index do |episode, index|
@@ -9,12 +9,33 @@
   # --------------------------------------------------------
 %>
 
-<% episodes.each_with_index do |episode, index| %>
-  <% slug = slugs.at(index) %>
-  <%= partial "partials/episode_template", :locals => {:doc => episode,
+<%# episodes.each_with_index do |episode, index| %>
+  <%# slug = slugs.at(index) %>
+  <%#= partial "partials/episode_template", :locals => {:doc => episode,
                                                        :active_slug => active_slug,
                                                        :slug => slug,
                                                        :index => index,
                                                        :published_videos => videos
                                                        } %>
-<% end %>
+<%# end %>
+
+<!doctype html>
+<html>
+  <head>
+    <title>Alisha Ramos</title>
+  </head>
+<body>
+  <!-- bloop -->
+  <center>
+    <h1>~*~Alisha Ramos~*~</h1><br />
+    <i>Working on a new site design.</i><br /><br />
+    I'm a front-end designer at Vox Media.<br /><br />
+    If you're looking for my research on women entrepreneurs and venture capital,<br />
+    you can find the <a href="http://alishalisha.github.io/AlishaRamos_Thesis_WomenVC.pdf">full text of my study here.</a><br /><br />
+    <p><strong>Other:</strong><br />
+    <a href="http://twitter.com/alishalisha">@alishalisha</a> | <a href="http://alisharamos.tumblr.com">What I'm Reading</a> | <a href="http://internetgoeshere.com">Writing</a> | <a href="http://instagram.com/alisharamos">Instagram</a></p>
+    <p>You can email me at ramos.alisha@gmail.com.</p>
+    <img src="http://adultcatfinder.com/embed/cat.gif" />
+  </center>
+</body>
+</html>
