--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -90,4 +90,9 @@ p {
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
+@media (max-width: 700px) {
+  .left, .right {
+    display: block;
+    width: 100%; } }
+
 /*# sourceMappingURL=style.css.map */
