media query lol

--- a/stylesheets/_layout.scss
+++ b/stylesheets/_layout.scss
@@ -1,5 +1,6 @@
 .wrapper {
   padding: 0 2em;
+  margin: 0 auto;
 }
 
 .left, .right {
@@ -16,4 +17,71 @@
 .right {
   display: inline-block;
   width: 60%;
+}
+
+@media (max-width: 700px) {
+	.left, .right {
+		display: block;
+		width: 100%;
+	}
+}
+
+@media (max-device-width: 740px) {
+	body {
+		font-size: 18px;
+	}
+	p, li {
+		line-height: 2.4em;
+	}
+	li {
+		margin-bottom: 3em;
+	}
+	.wrapper {
+		padding: 0 2em;
+		max-width: 100%;
+	}
+	.left, .right {
+		display: block !important;
+		padding: 0;
+		width: 100%;
+		margin: 0 auto;
+	}
+
+	.left {
+		h1 {
+			font-size: 7em;
+		}
+	}
+	.right {
+		margin-top: 10em;
+		h2 {
+			font-size: 4em;
+		}
+		p {
+			font-size: 1.5em;
+		}
+	}
+	.section {
+		margin: 6rem 0;
+		&.feeling {
+			img { width: 100%; max-width: 100%; }
+		}
+		&.quote p {
+			font-size: 6.5rem;
+			line-height: 1.2em;
+		}
+		&.book {
+			img.book {
+			max-width: 100%;
+			float: none;
+			}
+			blockquote {
+				font-size: 1.35rem;
+				line-height: 2.5em;
+			}
+		}
+	}
+	footer.footer {
+		float: none;
+	}
 }
