--- a/stylesheets/_layout.scss
+++ b/stylesheets/_layout.scss
@@ -27,5 +27,21 @@
 		display: block;
 		width: 100%;
 	}
+	img {
+		max-width: 100%;
+	}
+	section {
+		&.book {
+			img.book {
+			max-width: 100%;
+			width: 100%;
+			}
+		}
+		&.feeling {
+			img {
+				max-width: 100% !important;
+			}
+		}
+	}
 }
 
