--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -117,6 +117,7 @@ p {
     max-width: 100%; }
 
   section.book img.book {
+    width: 100%;
     max-width: 100%;
     width: 100%; }
   section.feeling img {
