--- a/stylesheets/_layout.scss
+++ b/stylesheets/_layout.scss
@@ -19,6 +19,16 @@
   width: 60%;
 }
 
+.bio-more {
+  display: none;
+  opacity: 0;
+  transition: 0.4s ease-in-out;
+  &.expand {
+    display: block;
+    opacity: 1;
+  }
+}
+
 @media (max-width: 700px) {
 	.wrapper {
 		padding: 0 1em;
