--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -13,7 +13,8 @@ p, li {
   color: #a0a0a0; }
 
 span.meta {
-  font-size: 0.6rem; }
+  font-size: 0.6rem;
+  color: #b9b9b9; }
   span.meta a {
     color: #b9b9b9; }
 
@@ -31,9 +32,10 @@ span.meta {
     margin: 0 0 0.5rem 0; }
   .section.book img.book {
     max-width: 200px;
-    float: left;
     padding: 0 2em 2em 0; }
   .section.book .book-title {
+    display: inline-block;
+    vertical-align: top;
     font-size: 1rem; }
   .section.book .book-author {
     vertical-align: top;
@@ -88,6 +90,9 @@ p {
 .right p {
   font-size: 0.9rem; }
 
+a#more:hover {
+  cursor: pointer; }
+
 .wrapper {
   padding: 0 2em;
   margin: 0 auto; }
@@ -104,6 +109,14 @@ p {
 .right {
   display: inline-block;
   width: 60%; }
+
+.bio-more {
+  display: none;
+  opacity: 0;
+  transition: 0.4s ease-in-out; }
+  .bio-more.expand {
+    display: block;
+    opacity: 1; }
 
 @media (max-width: 700px) {
   .wrapper {
