image width and some more padding on the wrapper

--- a/stylesheets/_typography.scss
+++ b/stylesheets/_typography.scss
@@ -36,7 +36,7 @@ span.meta {
   padding: 0 0 2rem 0;
   border-bottom: 1px dotted $gray;
   &.feeling img {
-    max-width: 300px;
+    max-width: 100%;
   }
   &.quote {
     p {
