--- a/stylesheets/_layout.scss
+++ b/stylesheets/_layout.scss
@@ -56,3 +56,37 @@
 	}
 }
 
+
+// PLAY
+body.play {
+  width: 100%;
+  height: 100%;
+  //background: url('../images/play-1.jpg');
+  background-image: url('http://36.media.tumblr.com/0140ffcae9aa95c91ce69777224d30f7/tumblr_n2r3q6yujr1qe0lqqo1_500.png');
+  background-size: cover;
+.wrapper {
+  margin-top: 60px;
+  color: #fff;
+  text-align: center;
+  .courier {
+    font-family: 'Courier New', Courier;
+  }
+  h3 {
+    font-weight: normal;
+    font-size: 0.9em;
+  }
+  span {
+    display: block;
+    text-align: center;
+    font-size: 0.8em;
+    opacity: 0.7;
+  }
+  h1 {
+    text-align: center;
+    margin: 0;
+  }
+  .player {
+    margin-top: 40px;
+  }
+}
+}
