--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -135,6 +135,31 @@ a#more:hover {
     width: 100%; }
   section.feeling img {
     max-width: 100% !important; } }
+body.play {
+  width: 100%;
+  height: 100%;
+  background-image: url("http://36.media.tumblr.com/0140ffcae9aa95c91ce69777224d30f7/tumblr_n2r3q6yujr1qe0lqqo1_500.png");
+  background-size: cover; }
+  body.play .wrapper {
+    margin-top: 60px;
+    color: #fff;
+    text-align: center; }
+    body.play .wrapper .courier {
+      font-family: 'Courier New', Courier; }
+    body.play .wrapper h3 {
+      font-weight: normal;
+      font-size: 0.9em; }
+    body.play .wrapper span {
+      display: block;
+      text-align: center;
+      font-size: 0.8em;
+      opacity: 0.7; }
+    body.play .wrapper h1 {
+      text-align: center;
+      margin: 0; }
+    body.play .wrapper .player {
+      margin-top: 40px; }
+
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
