adding icons, changing feels and music, typography tweaks

--- a/stylesheets/_typography.scss
+++ b/stylesheets/_typography.scss
@@ -9,7 +9,7 @@ $quote: #806d39;
 body {
   font-family: Georgia, 'Times New Roman', serif;
   color: $black;
-  font-size: 16px;
+  font-size: 18px;
 }
 
 p, li {
@@ -133,7 +133,7 @@ p {
 
 .right {
   p {
-    font-size: 0.9rem;
+    font-size: 0.9em;
   }
 }
 
