--- a/stylesheets/_layout.scss
+++ b/stylesheets/_layout.scss
@@ -12,6 +12,21 @@
   width: 40%;
   vertical-align: top;
   padding-right: 4em;
+  ul {
+    list-style: none;
+    padding: 0;
+    li {
+      font-size: 1.5em;
+      margin-right: 8px;
+      display: inline-block;
+      &:last-child {
+        margin: 0;
+      }
+      a:hover {
+        border: 0;
+      }
+    }
+  }
 }
 
 .right {
@@ -56,12 +71,25 @@
 	}
 }
 
+//
+@media screen and (max-width: 360px) {
+  .section.feeling {
+    display: none;
+  }
+  .left {
+    padding-right: 0;
+    ul li {
+      font-size: 2em;
+      margin-right: 12px;
+    }
+  }
+}
+
 
 // PLAY
 body.play {
   width: 100%;
   height: 100%;
-  //background: url('../images/play-1.jpg');
   background-image: url('http://36.media.tumblr.com/0140ffcae9aa95c91ce69777224d30f7/tumblr_n2r3q6yujr1qe0lqqo1_500.png');
   background-size: cover;
 .wrapper {
