--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: Georgia, 'Times New Roman', serif;
   color: #2e2e2e;
-  font-size: 16px; }
+  font-size: 18px; }
 
 p, li {
   line-height: 1.4em; }
@@ -88,7 +88,7 @@ p {
   color: #868686; }
 
 .right p {
-  font-size: 0.9rem; }
+  font-size: 0.9em; }
 
 a#more:hover {
   cursor: pointer; }
@@ -105,6 +105,17 @@ a#more:hover {
   width: 40%;
   vertical-align: top;
   padding-right: 4em; }
+  .left ul {
+    list-style: none;
+    padding: 0; }
+    .left ul li {
+      font-size: 1.5em;
+      margin-right: 8px;
+      display: inline-block; }
+      .left ul li:last-child {
+        margin: 0; }
+      .left ul li a:hover {
+        border: 0; }
 
 .right {
   display: inline-block;
@@ -135,6 +146,15 @@ a#more:hover {
     width: 100%; }
   section.feeling img {
     max-width: 100% !important; } }
+@media screen and (max-width: 360px) {
+  .section.feeling {
+    display: none; }
+
+  .left {
+    padding-right: 0; }
+    .left ul li {
+      font-size: 2em;
+      margin-right: 12px; } }
 body.play {
   width: 100%;
   height: 100%;
