--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,7 +4,7 @@ title: Alisha Ramos
 
 
 <p class="skinny p-heading--h1">
-  Hello. I'm a product designer at <a class="test">Vox Product</a>. I enjoy designing and building fun things for the internet.
+  Alisha Ramos is a product designer at <a href="http://voxmedia.com">Vox Media</a> in Washington, D.C. She loves building fun things for the internet.
 </p>
 
 <a href="#" class="p-button">Click me</a>
