--- a/source/layouts/blog_layout.erb
+++ b/source/layouts/blog_layout.erb
@@ -1,10 +1,5 @@
 <% wrap_layout :layout do %>
-  <article class="wrapper--skinniest">
-   
+  <article class="blog wrapper--skinniest">
     <%= yield %>
   </article>
 <% end %>
-
-<div>
-  Filed under: web design technology
-</div>
