--- a/source/blog/index.html.erb
+++ b/source/blog/index.html.erb
@@ -1,13 +1,4 @@
-hi this is where blog post index goes
 <% blog.articles[0...5].each do |article| %>
-  <article>
-    <h1>
-      <a href="<%= article.url %>"><%= article.title %></a>
-      <time><%= article.date.strftime('%b %e %Y') %></time>
-    </h1>
-
-    <%= article.summary %>
-
-    <a href="<%= article.url %>">Read more</a>
-  </article>
+  <a href="<%= article.url %>"><%= article.title %></a></br>
+  <time><%= article.date.strftime('%b %e %Y') %></time>
 <% end %>
