--- a/source/stylesheets/_patterns.scss
+++ b/source/stylesheets/_patterns.scss
@@ -13,6 +13,23 @@ Reusable patterns
     font-size: 50px;
     line-height: 1.38;
     color: $color-copy;
+    a {
+      position: relative;
+      display: inline-block;
+      color: $color-copy;
+      text-decoration: none;
+      &:after {
+        content:'';
+        position:absolute;
+        left:0;
+        right:0;
+        bottom: 5px;
+        border-bottom: solid 5px $color-accent;
+      }
+      &:hover:after {
+        border-color: $color-copy;
+      }
+    }
   }
   &--h1--blog {
     font-family: "Lora", Georgia, serif;
