all of the things

--- a/source/blog/index.html.erb
+++ b/source/blog/index.html.erb
@@ -1,4 +1,22 @@
-<% blog.articles[0...5].each do |article| %>
-  <a href="<%= article.url %>"><%= article.title %></a></br>
-  <time><%= article.date.strftime('%b %e %Y') %></time>
-<% end %>
+<%# blog.articles[0...5].each do |article| %>
+  <!--<a href="<%#= article.url %>"><%#= article.title %></a></br>
+  <time><%#= article.date.strftime('%b %e %Y') %></time>-->
+<%# end %>
+
+<h2 class="p-heading--h1--blog center">Writing</h2>
+
+<ul class="p-paragraph c-articles">
+  <li class="c-articles__article"><a href="http://www.niemanlab.org/2015/12/brand-relevance-and-revenue-in-the-age-of-snapchat/">Brand Relevance and Revenue in the Age of Snapchat</a></li>
+
+  <li class="c-articles__article"><a href="https://medium.com/@alishalisha/coding-is-a-privilege-5a592e7d94d7">Coding Is A Privilege</a></li>
+
+  <li class="c-articles__article"><a href="https://medium.com/@alishalisha/if-you-create-brogrammer-stickers-as-satire-you-re-part-of-the-problem-572bbb9270fe">If you create Brogrammer stickers as satire, you're part of the problem</a></li>   
+
+  <li class="c-articles__article"><a href="http://www.niemanlab.org/2014/12/reporters-designers-and-developers-become-bffs/">Reporters, Designers, and Developers Become BFFs</a></li>
+
+  <li class="c-articles__article"><a href="http://alishalisha.github.io/AlishaRamos_Thesis_WomenVC.pdf">In the Shark Tank: The Social Construction of Gendered Valuation in Venture Capital Investing of Women's Technology Startups</a></li>
+
+  <li class="c-articles__article"><a href="http://www.forbes.com/sites/lesliebradshaw/2012/01/10/how-women-are-getting-left-out-of-the-venture-capital-game/">How Women Are Getting Left Out of the Venture Capital Game</a></li>
+
+  <li class="c-articles__article"><a href="http://internetgoeshere.com/post/99139215153/a-study-in-subtle-hostility">A Study in Subtle Hostility</a></li> 
+</ul>
