--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,45 +1,12 @@
 ---
 title: Alisha Ramos
 ---
-
-
-<p class="skinny p-heading--h1">
-  <svg><use xlink:href="#icon-github"/></svg>
-  Alisha Ramos is a product designer at <a href="http://voxmedia.com">Vox Media</a> in Washington, D.C. She loves building fun things for the internet.
+<p class="p-heading--h1">
+  Hi. I'm a product designer at <a href="http://voxmedia.com">Vox Media</a> in Washington, D.C. I solve problems using design, code, and sometimes coffee.
 </p>
 
-<a href="#" class="p-button">Click me</a>
-
-<div style="width:600px;">
-<h1 class="p-heading--h1--blog">Coding is a privilege</h1>
-<div class="p-date">February 6, 2016</div>
-
-<p class="p-paragraph">
-  “The most beautiful experience we can have is the mysterious. It is the fundamental emotion that stands at the cradle of true art and true science.” <a href="" class="p-link">Albert Einstein</a>, The World as I See It, 1931 The debate between realism and anti-realism is, at least, a century old. Does Science describe the real world – or are its theories true only within a certain conceptual framework? Is science only instrumental or empirically adequate or is there more to it than that?
-</p>
-<p class="p-paragraph">
-  The current – mythological – image of <a href="" class="p-link">scientific enquiry</a> is as follows:
-</p>
-<p class="p-paragraph">
-  Without resorting to reality, one can, given infinite time and resources, produce all conceivable theories. One of these theories is bound to be the “truth”. To decide among them, scientists conduct experiments and compare their results to predictions yielded by the theories. A theory is falsified when one or more of its predictions fails. No amount of positive results – i.e., outcomes that confirm the theory’s predictions – can “prove right” a theory. Theories can only be proven false by that great arbiter, reality.
-</p>
-<p class="p-paragraph">
-  Jose Ortega y Gasset said (in an unrelated exchange) that all ideas stem from pre-rational beliefs. William James concurred by saying that accepting a truth often requires an act of will which goes beyond facts and into the realm of feelings. Maybe so, but there is little doubt today that beliefs are somehow involved in the formation of many scientific ideas, if not of the very endeavor of Science. After all, Science is a human activity and humans always believe that things exist (=are true) or could be true.
-</p>
-<p class="p-paragraph">
-  A distinction is traditionally made between believing in something’s existence, truth, value of appropriateness (this is the way that it ought to be) – and believing that something. The latter is a propositional attitude: we think that something, we wish that something, we feel that something and we believe that something. Believing in A and believing that A – are different.
-</p>
-<p class="p-paragraph">
-  It is reasonable to assume that belief is a limited affair. Few of us would tend to believe in contradictions and falsehoods. Catholic theologians talk about explicit belief (in something which is known to the believer to be true) versus implicit one (in the known consequences of something whose truth cannot be known). Truly, we believe in the probability of something (we, thus, express an opinion) – or in its certain existence (truth).
-</p>
-<p class="p-paragraph">
-  All humans believe in the existence of connections or relationships between things. This is not something which can be proven or proven false (to use Popper’s test). That things consistently follow each other does not prove they are related in any objective, “real”, manner – except in our minds. This belief in some order (if we define order as permanent relations between separate physical or abstract entities) permeates both Science and Superstition. They both believe that there must be – and is – a connection between things out there.
-</p>
-<p class="p-paragraph">
-  Science limits itself and believes that only certain entities inter-relate within well defined conceptual frames (called theories). Not everything has the potential to connect to everything else. Entities are discriminated, differentiated, classified and assimilated in worldviews in accordance with the types of connections that they forge with each other.
-</p>
+<div style="text-align: left; margin-top: 20px;">
+  <a class="p-icon--group" href="http://github.com/alishalisha"><svg class="p-icon p-icon--group"><use xlink:href="#icon-github"/></svg></a>
+  <a class="p-icon--group" href="http://twitter.com/alishalisha"><svg class="p-icon"><use xlink:href="#icon-twitter"/></svg></a>
+  <a class="p-icon--group" href="mailto:alisha.ramos@voxmedia.com"><svg class="p-icon p-icon--group"><use xlink:href="#email"/></svg></a>
 </div>
-
-<p style="color: #ccc; text-align: center;">
-  o o o
-</p>
