--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -17,36 +17,13 @@
   </head>
 
   <body class="<%= page_classes %>">
-    <svg display="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs><svg viewBox="0 0 1024 768" id="icon-github"><path d="M512 0C294.6 0 118.3 176.3 118.3 393.7c0 173.9 113.5 321.2 268.1 374.3 19.3 2.4 26.6-9.7 26.6-19.3v-67.6C304.3 705.3 280.2 628 280.2 628c-16.9-45.9-43.5-58-43.5-58-36.2-24.2 2.4-24.2 2.4-24.2 38.6 2.4 60.4 41.1 60.4 41.1 36.2 60.4 91.8 43.5 113.5 33.8 2.4-26.6 14.5-43.5 24.2-53.1-86.9-9.7-178.7-43.5-178.7-195.6 0-43.5 14.5-77.3 41.1-106.3-2.4-7.2-16.9-48.3 4.8-101.4 0 0 33.8-9.7 108.7 41.1 31.4-9.7 65.2-12.1 99-12.1s67.6 4.8 99 12.1c74.9-50.7 108.7-41.1 108.7-41.1 21.7 53.1 7.2 94.2 4.8 103.8 24.2 26.6 41.1 62.8 41.1 106.3 0 152.2-91.8 183.5-178.7 193.2 14.5 12.1 26.6 36.2 26.6 72.5v108.7c0 9.7 7.2 21.7 26.6 19.3 157-53.1 268.1-200.5 268.1-374.3C905.7 176.3 729.4 0 512 0z"/></svg><svg viewBox="0 0 500 500" id="middleman-logo"><path fill="#ECC561" d="M1.3 0h500v500H1.3z"/><path fill="#fff" d="M446 165.2v172.1l-41.7 5.4V233.6l-40.8 76.9h-.9l-43-77.2v119l-49.1 4.4V141.5l52.6 7.4 40.3 76.6 38.3-65.9zm-1-49.5L254 77.2v27.2l191 32.4z"/><path d="M59.9 164.9v170.8l41.7 7.1V234.7l40.8 76.9h.9l43-77.2v116.2l49.2 7.3V141.2l-52.7 7.4-40.3 78.1-38.3-68.8zm-.9-49.2l195-38.5v28.6L59 138.1z" opacity=".25"/><path fill="#fff" d="M445 380.6L254 419v-28.5l191-31z"/><path opacity=".25" d="M59 380.6L254 419v-28.5L59 358.1z"/></svg></defs></svg>
-    <header class="c-nav">
-      <div class="wrapper c-nav__wrapper">
-        <h1><a href="/" class="c-nav__title">Alisha Ramos</a></h1>
-        <nav>
-          <ul class="c-nav__menu">
-            <li class="c-nav__menu-item active">
-              <a href="#">About</a>
-            </li>
-            <li class="c-nav__menu-item">
-              <a href="#">Work</a>
-            </li>
-            <li class="c-nav__menu-item">
-              <a href="#">Writing</a>
-            </li>
-            <li class="c-nav__menu-item">
-              <a href="#">Awards & Press</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+    <%= partial "images/svg/symbol/svg" %>
+    <%= partial "layouts/nav" %>
 
     <div class="wrapper">
       <%= yield %>
     </div>
 
-    <footer class="c-footer">
-      c Alisha Ramos
-    </footer>
-
+    <%= partial "layouts/footer" %>
   </body>
 </html>
