--- a/source/stylesheets/_patterns.scss
+++ b/source/stylesheets/_patterns.scss
@@ -9,6 +9,7 @@ Reusable patterns
 
 .p-heading {
   &--h1 {
+    margin: 40px 0;
     @include filson;
     font-size: 50px;
     line-height: 1.38;
@@ -29,6 +30,10 @@ Reusable patterns
       &:hover:after {
         border-color: $color-copy;
       }
+    }
+    @media (max-width: 500px) {
+      margin: 20px 0 40px 0;
+      font-size: 40px;
     }
   }
   &--h1--blog {
@@ -90,4 +95,18 @@ Reusable patterns
 .p-date {
   @include effra-bold;
   color: $color-gray;
+}
+
+.p-icon {
+  height: 25px;
+  width: 25px;
+  &--group {
+    margin-right: 15px;
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+  &:hover {
+    fill: $color-accent;
+  }
 }
