--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,17 +1,22 @@
 @charset "utf-8";
 @import "normalize";
 @import "vars";
+@import "utils";
 @import "patterns";
 
 body {
   background: #fff;
 }
 
+img {
+  max-width: 100%;
+}
+
 .wrapper {
   max-width: 1200px;
   margin: 0 auto;
   @media (max-width: 1200px) {
-    padding: 20px;
+    padding: 10px 20px;
   }
   &--skinny {
     max-width: 845px;
@@ -33,6 +38,10 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
+    @media (max-width: 500px) {
+      justify-content: center;
+    }
   }
   &__title {
     position: relative;
@@ -67,34 +76,50 @@ body {
     a {
       color: $color-copy;
       text-decoration: none;
+      position: relative;
       &:visited {
         color: $color-copy;
+      }
+      &:hover::after,
+      &:focus::after {
+        height: 4px;
+        opacity: 1;
+        transform: translateY(0px);
+      }
+      &:after {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background: $color-accent;
+        content: '';
+        opacity: 0;
+        transition: height 0.3s, opacity 0.3s, transform 0.3s;
+        transform: translateY(-10px);
       }
     }
     &:last-child {
       margin-right: 0;
-    }
-    &.active {
-      position: relative;
-    }
-    &.active:before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 5px;
-      z-index: -1;
-      border-top: 4px solid $color-accent;
-      transform: translateY(11px);
     }
   }
 }
 
 // footer component
 .c-footer {
+  background: $color-copy;
+  color: #fff;
+  padding: 20px 0;
   text-align: center;
-  color: #ccc;
+  margin-top: 40px;
+  @include effra-bold;
+  letter-spacing: 1pt;
+  text-transform: uppercase;
+}
+.index, .work, .blog {
+  .c-footer {
+    display: none;
+  }
 }
 
 // blog layout
@@ -110,6 +135,21 @@ body {
     }
     a {
       @extend .p-link;
+      border-bottom: 0;
+      font-weight: normal;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+}
+
+// articles
+.c-articles {
+  &__article {
+    margin-bottom: 10px;
+    a {
+      border-bottom: 0;
     }
   }
 }
