--- a/source/stylesheets/_vars.scss
+++ b/source/stylesheets/_vars.scss
@@ -1,7 +1,7 @@
-$color-accent: #68ffc6;
+$color-accent: #6CE0FF;
 $color-copy: #191919;
 $color-gray: #6E6E6E;
-$border-width: 5px;
+$border-width: 3px;
 
 @mixin effra-bold {
   font-family: "effra", Verdana, sans-serif;
