--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -30,7 +30,6 @@ img {
 
 // nav component
 .c-nav {
-  border-bottom: 5px solid $color-copy;
   @include effra-bold;
   letter-spacing: 1pt;
   text-transform: uppercase;
@@ -47,17 +46,18 @@ img {
     position: relative;
     color: $color-copy;
     text-decoration: none;
-    font-size: 34px;
+    font-size: 20px;
     &:before {
       content: '';
       position: absolute;
-      top: 0;
+      top: 5px;
       left: 0;
       width: 100%;
       height: 5px;
       z-index: -1;
-      border-top: 4px solid $color-accent;
+      border-top: 3px solid $color-accent;
       transform: translateY(19px);
+      transition: opacity 0.2s ease-in-out;
     }
     &:hover:before {
       opacity: 0;
@@ -71,7 +71,7 @@ img {
   &__menu-item {
     display: inline-block;
     margin-right: 20px;
-    font-size: 20px;
+    font-size: 18px;
     z-index: 0;
     a {
       color: $color-copy;
@@ -82,7 +82,7 @@ img {
       }
       &:hover::after,
       &:focus::after {
-        height: 4px;
+        height: 3px;
         opacity: 1;
         transform: translateY(0px);
       }
