--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -21,7 +21,9 @@
     <%= partial "layouts/nav" %>
 
     <div class="wrapper">
-      <%= yield %>
+      <div class="content">
+        <%= yield %>
+      </div>
     </div>
 
     <%= partial "layouts/footer" %>
