--- a/source/stylesheets/_utils.scss
+++ b/source/stylesheets/_utils.scss
@@ -1,3 +1,25 @@
 .center {
   text-align: center;
 }
+
+.quiet {
+  color: $color-gray;
+}
+
+.small {
+  font-size: 14px;
+}
+
+.padded {
+  margin: 3em 0;
+  &:first-child {
+    margin-top: 0;
+  }
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.m-top {
+  margin-top: 2em;
+}
