--- a/source/layouts/_nav.html.erb
+++ b/source/layouts/_nav.html.erb
@@ -10,7 +10,10 @@
           <a href="/work">Work</a>
         </li>
         <li class="c-nav__menu-item">
-          <a href="/blog">Writing</a>
+          <a href="/blog">Blog</a>
+        </li>
+        <li class="c-nav__menu-item">
+          <a href="/writing">Writing</a>
         </li>
       </ul>
     </nav>
