--- a/source/stylesheets/_vars.scss
+++ b/source/stylesheets/_vars.scss
@@ -12,3 +12,8 @@ $border-width: 3px;
   font-family: "filson-pro", Verdana, sans-serif;
   font-weight: 400;
 }
+
+@mixin lora {
+  font-family: "Lora", Georgia, serif;
+  font-size: 18px;
+}
