--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -6,10 +6,24 @@
 
 body {
   background: #fff;
+  @include lora;
 }
 
 img {
   max-width: 100%;
+}
+
+a, a:link, a:visited {
+  color: $color-copy;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.content {
+  min-height: 100%;
 }
 
 .wrapper {
@@ -26,6 +40,18 @@ img {
     max-width: 665px;
     margin: 0 auto;
   }
+}
+
+// typography
+h2 {
+  @include filson;
+  font-size: 42px;
+}
+
+time {
+  font-style: italic;
+  font-size: 14px;
+  color: $color-gray;
 }
 
 // nav component
@@ -80,6 +106,9 @@ img {
       &:visited {
         color: $color-copy;
       }
+      &:hover {
+        text-decoration: none;
+      }
       &:hover::after,
       &:focus::after {
         height: 3px;
@@ -107,8 +136,6 @@ img {
 
 // footer component
 .c-footer {
-  background: $color-copy;
-  color: #fff;
   padding: 20px 0;
   text-align: center;
   margin-top: 40px;
@@ -116,7 +143,7 @@ img {
   letter-spacing: 1pt;
   text-transform: uppercase;
 }
-.index, .work, .blog {
+.index, .work {
   .c-footer {
     display: none;
   }
@@ -126,9 +153,10 @@ img {
 .blog {
   article {
     h1 {
-      font-family: "Lora", Georgia, serif;
-      font-size: 50px;
+      @include filson;
+      font-size: 42px;
       text-align: center;
+      margin-bottom: 0;
     }
     p {
       @extend .p-paragraph;
@@ -138,7 +166,7 @@ img {
       border-bottom: 0;
       font-weight: normal;
       &:hover {
-        text-decoration: underline;
+        text-decoration: none;
       }
     }
   }
