--- a/source/work/index.html.erb
+++ b/source/work/index.html.erb
@@ -2,6 +2,6 @@
 title: Alisha Ramos | Work
 ---
 
-<h2 class="p-heading--h1--blog center">Work</h2>
+<h2 class="center">Work</h2>
 
 <p class="p-paragraph center">Coming soon.</p>
