--- a/source/layouts/blog_layout.erb
+++ b/source/layouts/blog_layout.erb
@@ -3,7 +3,7 @@
     <h1><%= current_page.data.title %></h1>
     <div class="center"><time><%= current_page.data.date %></time></div>
     <%= yield %>
-    <span>category: <%= current_page.data.category %></span>
+    <div class="category">Category: <%= current_page.data.category %></div>
   </article>
   <div class="m-top center">
     <a class="p-link" href="/">Back home</a> / <a class="p-link" href="/blog">Back to blog</a>
