--- a/source/blog/index.html.erb
+++ b/source/blog/index.html.erb
@@ -8,3 +8,6 @@
     </div>
   <% end %>
 </div>
+<div class="m-top center">
+  <a class="p-link" href="/">Back home</a> / <a class="p-link" href="/blog">Back to blog</a>
+</div>
