--- a/source/blog/index.html.erb
+++ b/source/blog/index.html.erb
@@ -9,5 +9,5 @@
   <% end %>
 </div>
 <div class="m-top center">
-  <a class="p-link" href="/">Back home</a> / <a class="p-link" href="/blog">Back to blog</a>
+  <a class="p-link" href="/">Back home</a>
 </div>
