--- a/source/layouts/_nav.html.erb
+++ b/source/layouts/_nav.html.erb
@@ -1,7 +1,7 @@
 <header class="c-nav">
   <div class="wrapper c-nav__wrapper">
-    <h1><a href="/" class="c-nav__title">Alisha Ramos</a></h1>
-    <nav>
+    <h1 class="c-nav__title"><a href="/">Alisha Ramos</a></h1>
+    <nav class="c-nav__menu-wrapper">
       <ul class="c-nav__menu">
         <li class="c-nav__menu-item">
           <a href="/about">About</a>
