--- a/source/layouts/_footer.html.erb
+++ b/source/layouts/_footer.html.erb
@@ -1,5 +1,10 @@
 <footer class="c-footer">
   <div class="wrapper">
-    👀
+    <div>👀</div>
+    <div style="margin-top: 20px;">
+      <a class="p-icon--group" href="http://github.com/alishalisha"><svg class="p-icon p-icon--group"><use xlink:href="#icon-github"/></svg></a>
+      <a class="p-icon--group" href="http://twitter.com/alishalisha"><svg class="p-icon"><use xlink:href="#icon-twitter"/></svg></a>
+      <a class="p-icon--group" href="mailto:alisha.ramos@voxmedia.com"><svg class="p-icon p-icon--group"><use xlink:href="#email"/></svg></a>
+    </div>
   </div>
 </footer>
