--- a/source/work/index.html.erb
+++ b/source/work/index.html.erb
@@ -4,4 +4,56 @@ title: Alisha Ramos | Work
 
 <h2 class="center">Work</h2>
 
-<p class="p-paragraph center">Coming soon.</p>
+<div class="flex-grid-container">
+
+  <div class="flex-grid-container__row">
+    <div class="project">
+      <a href="#">
+        <div class="project__thumbnail" style="background-image: url(http://a1.dspncdn.com/media/692x/0b/b4/74/0bb4743d5f3fa15be02b9f5af1c15cc1.jpg);"></div>
+      </a>
+      <a href="#">
+        <div class="project__name">
+          Vox Year In Emoji
+        </div>
+      </a>
+    </div>
+
+    <div class="project">
+      <a href="#">
+        <div class="project__thumbnail" style="background-image: url(http://a1.dspncdn.com/media/692x/0d/27/44/0d274459d81689d2496e880b276a953c.jpg);"></div>
+      </a>
+      <a href="#">
+        <div class="project__name">
+          Vox Year In Emoji
+        </div>
+      </a>
+    </div>
+  </div>
+
+  <div class="flex-grid-container__row">
+
+    <div class="project">
+      <a href="#">
+        <div class="project__thumbnail" style="background-image: url(http://a1.dspncdn.com/media/692x/ab/37/ee/ab37ee80271eeba208efd076466409e0.jpg);"></div>
+      </a>
+      <a href="#">
+        <div class="project__name">
+          Vox Year In Emoji
+        </div>
+      </a>
+    </div>
+
+    <div class="project">
+      <a href="#">
+        <div class="project__thumbnail" style="background-image: url(http://a1.dspncdn.com/media/692x/f7/86/0a/f7860a8c6aa5848c9d77acf99469ca23.jpg);"></div>
+      </a>
+      <a href="#">
+        <div class="project__name">
+          Vox Year In Emoji
+        </div>
+      </a>
+    </div>
+
+  </div>
+
+</div>
