--- a/source/about/index.html.erb
+++ b/source/about/index.html.erb
@@ -5,8 +5,9 @@ title: Alisha Ramos | About
 
   <img src="/images/alisha-ramos.png" style="display: block; margin: 40px auto 30px auto; width: 343px;" />
 
+  <h2>About Me</h2>
   <div class="p-paragraph" style="margin-bottom: 40px;">
-    <p>As a child of the early 2000's, I learned how to code and design through sites like Neopets and Livejournal, and that's precisely what I do now. I'm currently a Product Design Director at Vox Media based in Washington, D.C. building scalable, functional, and beautiful platforms.</p>
+    <p>I'm currently a Product Design Director at Vox Media based in Washington, D.C. building scalable, functional, and beautiful platforms. As a child of the early 2000's, I learned how to code and design through sites like Neopets and Livejournal, and that's precisely what I do now.</p>
 
     <p>I enjoy: building what I design through code, learning new technologies, and hacking on zany ideas. I believe: that users always come first, engineers and designers should collaborate more, and that you shouldn't be afraid to show your work.</p>
 
@@ -14,8 +15,14 @@ title: Alisha Ramos | About
 
     <p>Things I like: feminism, fashion, makeup, running, <i>Fixer Upper</i>, emoji. 🙋</p>
 
-    <p>📝 I write a weekly newsletter on mixed identity and other personal reflections called Mixed Feelings. <a href="tinyletter.com/mixedfeelings" class="p-link">Sign up here!</a></p>
+    <p>📝 I write a weekly newsletter on mixed identity and other personal reflections called Mixed Feelings. <a href="http://tinyletter.com/mixedfeelings" class="p-link">Sign up here!</a></p>
 
     <p>You can email me at <a href="mailto:alisha.ramos@voxmedia.com" class="p-link">alisha.ramos@voxmedia.com</a>.</p>
   </div>
+
+  <h2>Press & Awards</h2>
+  <p class="p-paragraph" style="margin-bottom: 40px;">In 2015, I was awarded a <a href="http://tech.co/dcfemtech-recognizes-top-30-women-programmers-2015-04" class="p-link">"Top 30 Most Powerful Women Programmers in DC"</a> award by DCFemTech.</p>
+
+  <h2>Speaking</h2>
+  <p>Coming soon.</p>
 </div>
