--- a/source/blog/index.html.erb
+++ b/source/blog/index.html.erb
@@ -1,4 +1,4 @@
-<h2 class="center">Blog Posts</h2>
+<h2 class="center" style="margin-bottom: 40px;">Blog Posts</h2>
 
 <div class="center">
   <% blog.articles[0...5].each do |article| %>
