--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,5 +2,5 @@
 title: Alisha Ramos
 ---
 <p class="p-heading--h1">
-  Hi. I'm a product designer at <a href="http://voxmedia.com">Vox Media</a> in Washington, D.C. I solve problems using design, code, and sometimes coffee.
+  Hi. I'm a product design director at <a href="http://voxmedia.com">Vox Media</a> in Washington, D.C. I solve problems using design, code, and sometimes coffee. I write a weekly newsletter on mixed race identity and other personal reflections called <a href="http://tinyletter.com/mixedfeelings">Mixed Feelings</a>.
 </p>
