committing all sorts of css sins

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,5 +2,13 @@
 title: Alisha Ramos
 ---
 <p class="p-heading--h1">
-  Hi. I'm a product design director at <a href="http://voxmedia.com">Vox Media</a> in Washington, D.C. I solve problems using design, code, and sometimes coffee. I write a weekly newsletter on mixed race identity and other personal reflections called <a href="http://tinyletter.com/mixedfeelings">Mixed Feelings</a>.
+  Hi. I'm a product design director at <a href="http://voxmedia.com">Vox Media</a> in Washington, D.C.
 </p>
+
+<div class="flex flex-space flex-wrap">
+  <div class="col-1-2">
+    <p class="p-paragraph">📬 I write a weekly newsletter on mixed-race identity and other personal reflections called Mixed Feelings. <a href="http://tinyletter.com/mixedfeelings">Subscribe here</a>!</p>
+  </div>
+  <div class="col-1-2">
+  </div>
+</div>
