--- a/source/stylesheets/_utils.scss
+++ b/source/stylesheets/_utils.scss
@@ -26,3 +26,41 @@
     margin-top: 1em;
   }
 }
+
+/* grid helper */
+.flex {
+  display: flex;
+}
+
+.flex-space {
+  justify-content: space-between;
+}
+
+.flex-center {
+  align-items: center;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.col-1-2 {
+  width: 48%;
+  margin-right: 1.25%;
+  & + & {
+    margin-right: 0;
+  }
+  @media (max-width: 800px) {
+    width: 100%;
+    margin-right: 0;
+  }
+}
+
+.col-1-3 {
+  width: 30%;
+  margin-right: 1.25em;
+}
+
+.col-2-3 {
+  width: 67%;
+}
