--- a/source/work/index.html.erb
+++ b/source/work/index.html.erb
@@ -1,26 +1,21 @@
 ---
 title: Alisha Ramos | Work
+blog: work
 ---
 
-<h2 class="center">Work</h2>
+<h2 class="center" style="margin-bottom: 40px;">Work</h2>
 
-<p class="center">Coming soon.</p>
-
-<!--<div class="flex-grid-container">
-  <div class="flex-grid-container__row">
-  <% data.projectlist.each do |project| %>
-    <div class="project">
-      <a href="/work/<%= project.slug %>.html">
-        <div class="project__thumbnail" style="background-image: url('/images/<%= project.thumbnail %>');">
-        </div>
-      </a>
-      <a href="/work/<%= project.slug %>">
-        <div class="project__name">
-          <%= project.name %>
-        </div>
-      </a>
+<div class="center">
+  <p>Coming soon. :)</p>
+  <!--<% blog('work').articles.each do |article| %>
+    <div class="padded">
+      <time><%= article.date.strftime('%b %e %Y') %></time><br />
+      <a href="<%= article.url %>"><%= article.title %></a>
+      <%# article.thumbnail %>
     </div>
-  <% end %>
-  </div>
+  <% end %>-->
+</div>
 
-</div>-->
+<div class="m-top center">
+  <a class="p-link" href="/">Back home</a>
+</div>
