--- a/source/about/index.html.erb
+++ b/source/about/index.html.erb
@@ -7,22 +7,17 @@ title: Alisha Ramos | About
 
   <h2>About Me</h2>
   <div class="p-paragraph" style="margin-bottom: 40px;">
-    <p>I'm currently a Product Design Director at Vox Media based in Washington, D.C. building scalable, functional, and beautiful platforms. As a child of the early 2000's, I learned how to code and design through sites like Neopets and Livejournal, and that's precisely what I do now.</p>
 
-    <p>I enjoy: building what I design through code, learning new technologies, and hacking on zany ideas. I believe: that users always come first, engineers and designers should collaborate more, and that you shouldn't be afraid to show your work.</p>
+    <p>Alisha Ramos is a Director of Product Design at Vox Media and lives in Washington, D.C. At Vox Media, she oversees product design for the revenue group, with a special focus on products and platforms that drive revenue and the business on- and off-platform. She played an integral part in building the branded content and partnerships business at Vox (now Vox Creative) and has been considered <a href="http://www.niemanlab.org/author/aramos/">a thought leader</a> in the cross-section between journalism/editorial, product, and design. She was named <a href="http://tech.co/dcfemtech-recognizes-top-30-women-programmers-2015-04">one of DC's Most Powerful Women Programmers" in 2015 by DCFemTech</a>. Her passion lies in creating beautiful experiences that connect with diverse audiences and tell a real story.</p>
 
-    <p>Prior to designing, I was a brand strategy consultant in New York for several Fortune 500 companies. I graduated from Harvard University with a degree in Sociology and History.</p>
+    <p>In a former life, she worked in brand strategy consulting for Fortune 500 companies at Prophet, a global consulting firm.</p>
 
-    <p>Things I like: feminism, fashion, makeup, running, <i>Fixer Upper</i>, emoji. 🙋</p>
+    <p>Alisha earned her Bachelor's degree from Harvard University, where she focused on Sociology and History. While at Harvard, she ran a small but mighty publication called The Harvard Voice, and launched a small and disruptive community platform called Harvard FML.</p>
 
-    <p>📝 I write a weekly newsletter on mixed identity and other personal reflections called Mixed Feelings. <a href="http://tinyletter.com/mixedfeelings" class="p-link">Sign up here!</a></p>
+    <p>✨ Fun fact: As a child, Alisha taught herself to code and design by participating in communities such as Neopets and Livejournal. (Long live LJ.)</p>
 
-    <p>You can email me at <a href="mailto:alisha.ramos@voxmedia.com" class="p-link">alisha.ramos@voxmedia.com</a>.</p>
+    <p>📝 She writes a weekly newsletter on mixed identity and other personal reflections called Mixed Feelings. <a href="http://tinyletter.com/mixedfeelings" class="p-link">Sign up here!</a></p>p>
+
+    <p>You can email her at <a href="mailto:ramos.alisha@gmail.com" class="p-link">ramos.alisha@gmail.com</a>.</p>
   </div>
-
-  <h2>Press & Awards</h2>
-  <p class="p-paragraph" style="margin-bottom: 40px;">In 2015, I was awarded a <a href="http://tech.co/dcfemtech-recognizes-top-30-women-programmers-2015-04" class="p-link">"Top 30 Most Powerful Women Programmers in DC"</a> award by DCFemTech.</p>
-
-  <h2>Speaking</h2>
-  <p>Coming soon.</p>
 </div>
