--- a/source/about/index.html.erb
+++ b/source/about/index.html.erb
@@ -3,20 +3,19 @@ title: Alisha Ramos | About
 ---
 <div class="wrapper--skinniest">
 
-  <img src="/images/alisha-ramos.png" style="display: block; margin: 40px auto 30px auto; width: 343px;" />
+  <img src="/images/alisha-ramos.jpg" style="display: block; margin: 40px auto 30px auto; width: 343px;" />
 
-  <h2>About Me</h2>
   <div class="p-paragraph" style="margin-bottom: 40px;">
 
-    <p>Alisha Ramos is a Director of Product Design at Vox Media and lives in Washington, D.C. At Vox Media, she oversees product design for the revenue group, with a special focus on products and platforms that drive revenue and the business on- and off-platform. She played an integral part in building the branded content and partnerships business at Vox (now Vox Creative) and has been considered <a href="http://www.niemanlab.org/author/aramos/">a thought leader</a> in the cross-section between journalism/editorial, product, and design. She was named <a href="http://tech.co/dcfemtech-recognizes-top-30-women-programmers-2015-04">one of DC's Most Powerful Women Programmers" in 2015 by DCFemTech</a>. Her passion lies in creating beautiful experiences that connect with diverse audiences and tell a real story.</p>
+    <p>Alisha Ramos is a Director of Product Design at Vox Media and lives in Washington, D.C. At Vox Media, she oversees product design for the revenue group, with a special focus on products and platforms that drive revenue and the business on- and off-platform. She played an integral part in building the branded content and partnerships business at Vox (now Vox Creative) and has been considered <a href="http://www.niemanlab.org/author/aramos/">a thought leader</a> in the cross-section between editorial, product, and design. She was named <a href="http://tech.co/dcfemtech-recognizes-top-30-women-programmers-2015-04">"one of DC's Most Powerful Women Programmers" in 2015 by DCFemTech</a>.</p>
 
     <p>In a former life, she worked in brand strategy consulting for Fortune 500 companies at Prophet, a global consulting firm.</p>
 
-    <p>Alisha earned her Bachelor's degree from Harvard University, where she focused on Sociology and History. While at Harvard, she ran a small but mighty publication called The Harvard Voice, and launched a small and disruptive community platform called Harvard FML.</p>
+    <p>Alisha earned her Bachelor's degree from Harvard University, where she focused on Sociology and History. While at Harvard, she ran a small but mighty publication called <i>The Harvard Voice</i>, and launched a small and disruptive community platform called Harvard FML.</p>
 
     <p>✨ Fun fact: As a child, Alisha taught herself to code and design by participating in communities such as Neopets and Livejournal. (Long live LJ.)</p>
 
-    <p>📝 She writes a weekly newsletter on mixed identity and other personal reflections called Mixed Feelings. <a href="http://tinyletter.com/mixedfeelings" class="p-link">Sign up here!</a></p>p>
+    <p>📝 She writes a weekly newsletter on mixed identity and other personal reflections called Mixed Feelings. <a href="http://tinyletter.com/mixedfeelings" class="p-link">Sign up here!</a></p>
 
     <p>You can email her at <a href="mailto:ramos.alisha@gmail.com" class="p-link">ramos.alisha@gmail.com</a>.</p>
   </div>
