--- a/source/about/index.html.erb
+++ b/source/about/index.html.erb
@@ -7,11 +7,15 @@ title: Alisha Ramos | About
 
   <div class="p-paragraph" style="margin-bottom: 40px;">
 
-    <p>Alisha Ramos is a Director of Product Design at Vox Media and lives in Washington, D.C. At Vox Media, she oversees product design for the revenue group, with a special focus on products and platforms that help tell brand partners' stories both on- and off-platform. She played an integral part in building the branded content and partnerships business at Vox (now Vox Creative) and has been considered <a href="http://www.niemanlab.org/author/aramos/">a thought leader</a> in the cross-section between editorial, product, and design. She was named <a href="http://tech.co/dcfemtech-recognizes-top-30-women-programmers-2015-04">"one of DC's Most Powerful Women Programmers" in 2015 by DCFemTech</a>.</p>
+    <p>Hello! I'm currently a Design Director at Vox Media and live in Washington, D.C. At Vox, I oversee a small team of front-end designers who build products and platforms that help tell our brand partners' stories both on- and off-platform. Prior to that, I helped build the branded content and partnerships business at Vox (now Vox Creative).</p>
 
-    <p>In a former life, she worked in brand strategy consulting for Fortune 500 companies at Prophet, a global consulting firm.</p>
+    <p>I've <a href="http://www.niemanlab.org/author/aramos/">written about</a> the cross-section between editorial, product, and design. I believe that the best work happens when <a href="http://www.niemanlab.org/2014/12/reporters-designers-and-developers-become-bffs/">developers, designers, and reporters become friends</a>, share ideas, and tell stories together. I like thinking about what it means for publishers and storytellers to <a href="http://www.niemanlab.org/2015/12/brand-relevance-and-revenue-in-the-age-of-snapchat/">live in a distributed-platform world</a>.</p>
 
-    <p>Alisha earned her Bachelor's degree from Harvard University, where she focused on Sociology and History. While at Harvard, she ran a digital publication called <i>The Harvard Voice</i>.</p>
+    <p>In 2015, DCFemTech named me <a href="http://tech.co/dcfemtech-recognizes-top-30-women-programmers-2015-04">"one of DC's Most Powerful Women Programmers"</a>.</p>
+
+    <p>In a former life, I worked in brand strategy consulting for Fortune 500 companies at <a href="http://prophet.com">Prophet</a>, a global consulting firm.</p>
+
+    <p>I attended Harvard University, where I earned my degree in Sociology and History. While at Harvard, she ran a digital publication called <i>The Harvard Voice</i>.</p>
 
     <p>📝 She writes a weekly newsletter on mixed identity and other personal reflections called Mixed Feelings. <a href="http://tinyletter.com/mixedfeelings" class="p-link">Sign up here!</a></p>
 
