--- a/source/about/index.html.erb
+++ b/source/about/index.html.erb
@@ -7,7 +7,7 @@ title: Alisha Ramos | About
 
   <div class="p-paragraph" style="margin-bottom: 40px;">
 
-    <p>Hello! I'm currently a Design Director at Vox Media and live in Washington, D.C. At Vox, I oversee a small team of front-end designers who build products and platforms that help tell our brand partners' stories both on- and off-platform. Prior to that, I helped build the branded content and partnerships business at Vox (now Vox Creative).</p>
+    <p>Hello! I'm currently a Design Director at Vox Media and live in Washington, D.C. At Vox, I lead a small team of front-end designers who work with engineers to build products and platforms that help tell our brand partners' stories both on- and off-platform. Prior to that, I helped build the branded content and partnerships business at Vox (now Vox Creative).</p>
 
     <p>I've <a href="http://www.niemanlab.org/author/aramos/">written about</a> the cross-section between editorial, product, and design. I believe that the best work happens when <a href="http://www.niemanlab.org/2014/12/reporters-designers-and-developers-become-bffs/">developers, designers, and reporters become friends</a>, share ideas, and tell stories together. I like thinking about what it means for publishers and storytellers to <a href="http://www.niemanlab.org/2015/12/brand-relevance-and-revenue-in-the-age-of-snapchat/">live in a distributed-platform world</a>.</p>
 
