--- a/source/layouts/work_layout.erb
+++ b/source/layouts/work_layout.erb
@@ -1,14 +1,12 @@
 <% wrap_layout :layout do %>
   <article class="wrapper--skinniest">
     <h1><%= current_page.data.title %></h1>
-    <p>[insert work date here]</p>
-    <%= yield %>
+    <img src="<%= current_page.data.thumbnail %>" />
 
-    <p>[insert work category here]</p>
-    <p>[insert links to other work projects here]</p>
+    <%= yield %>
   </article>
 
   <div class="m-top center">
-    <a class="p-link" href="/">Back home</a> / <a class="p-link" href="/blog">Back to blog</a>
+    <a class="p-link" href="/work">Back all work</a> / <a class="p-link" href="/">Back home</a>
   </div>
 <% end %>
