--- a/source/work/index.html.erb
+++ b/source/work/index.html.erb
@@ -6,14 +6,16 @@ blog: work
 <h2 class="center" style="margin-bottom: 40px;">Work</h2>
 
 <div class="center">
-  <p>Coming soon. :)</p>
-  <!--<% blog('work').articles.each do |article| %>
-    <div class="padded">
-      <time><%= article.date.strftime('%b %e %Y') %></time><br />
-      <a href="<%= article.url %>"><%= article.title %></a>
-      <%# article.thumbnail %>
-    </div>
-  <% end %>-->
+  <div class="flex flex-space flex-wrap padded">
+  <% blog('work').articles.each do |article| %>
+      <div class="work__piece">
+        <a href="<%= article.url %>"><img class="work__thumbnail" src="<%= article.data.thumbnail %>" /></a>
+        <a class="work__piece-title" href="<%= article.url %>"><%= article.title %></a>
+        <% if article.data.org.present? %>
+        <% end %>
+      </div>
+  <% end %>
+  </div>
 </div>
 
 <div class="m-top center">
